XW-4904 | Fix jumping around glocal nav #house-of-pain II

--- a/app/styles/component/design-system/_community-bar.scss
+++ b/app/styles/component/design-system/_community-bar.scss
@@ -10,7 +10,7 @@
 		}
 	}
 
-	.site-head-headroom-not-top & {
+	.with-fandom-app-smart-banner .site-head-headroom-not-top & {
 		margin-top: 85px;
 	}
 }
